packages/infrastructure/definitions/web-client/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-client
  namespace: social-network
  labels:
    stage: production
    name: web-client
    app: social-network
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        stage: production
        name: web-client
        app: social-network
    spec:
      containers:
      - name: web-client
        image: davidchristie/web-client:${VERSION}
